objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Complete_Age__c</fullName>
        <label>Candidate Complete Age</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Reason__c</fullName>
        <label>Candidate Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Family Reason</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Candidate</label>
    <nameField>
        <displayFormat>c-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Dont_Allow_Numbers_In_Candidate_Name</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNUMBER(Candidate_Name__c), CONTAINS(Candidate_Name__c , &apos;%&apos;))</errorConditionFormula>
        <errorDisplayField>Candidate_Name__c</errorDisplayField>
        <errorMessage>Numbers are not allowed in Candidate Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_Description_Mandatory_On_Other_Reas</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   ISPICKVAL( Candidate_Reason__c, &apos;Other&apos;),
   ISBLANK( Description__c )
   )</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>The description is mandatory for Candidate reason &apos;Other&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Numbers_For_Age</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNUMBER(Candidate_Complete_Age__c))</errorConditionFormula>
        <errorMessage>Only numbers are allowed in age.</errorMessage>
    </validationRules>
</CustomObject>